katalog/tests/gatekeeper-manifests/deployment-allowed.yml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deployment-allowed
  name: deployment-allowed
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: deployment-allowed
  strategy: {}
  template:
    metadata:
      labels:
        run: deployment-allowed
    spec:
      containers:
        - image: reg.sighup.io/sighupio/fury/redis:5.0.8
          name: deployment-allowed
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          resources:
            requests:
              memory: "60Mi"
              cpu: "30m"
            limits:
              memory: "80Mi"
              cpu: "50m"
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deployment-allowed-ns
  name: deployment-allowed-ns
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      run: deployment-allowed-ns
  template:
    metadata:
      labels:
        run: deployment-allowed-ns
    spec:
      containers:
        - image: reg.sighup.io/sighupio/fury/nginx:latest
          name: deployment-allowed-ns
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-allowed
  namespace: default
spec:
  rules:
    - host: ingress-allowed.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: example
              servicePort: 80
