katalog/tests/gatekeeper-manifests/deployment_trusted.yml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deployment-allowed
  name: deployment-allowed
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: deployment-allowed
  strategy: {}
  template:
    metadata:
      labels:
        run: deployment-allowed
    spec:
      containers:
        - image: reg.sighup.io/sighupio/fury/redis:5.0.8
          name: deployment-allowed
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          resources:
            requests:
              memory: "60Mi"
              cpu: "30m"
            limits:
              memory: "80Mi"
              cpu: "50m"
status: {}
