katalog/tests/gatekeeper-manifests/ingress_rejected_duplicated.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-not-allowed
  namespace: default
spec:
  rules:
    - host: ingress-allowed.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: example-2
                port:
                  number: 80
