katalog/tests/gatekeeper-manifests/ingress_trusted.yml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-allowed
  namespace: default
spec:
  rules:
    - host: ingress-allowed.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: example
              servicePort: 80
