katalog/tests/gatekeeper-manifests/mutation.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

#Sample Mutation that adds an annotation
apiVersion: mutations.gatekeeper.sh/v1
kind: AssignMetadata
metadata:
  name: demo-annotation-owner
spec:
  match:
    scope: Namespaced
    name: deployment-*
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment"]
  location: "metadata.annotations.owner"
  parameters:
    assign:
      value: "sighup"
