katalog/tests/gatekeeper-manifests/ns-can-be-deleted-with-protection-disabled.yml
# Copyright (c) 2021 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: v1
kind: Namespace
metadata:
  name: my-unprotected-namespace
  annotations:
    protected: "no"
